RESOLVED FIXED54320
Garbage collection timer cycles forever, even when nothing is happening
https://bugs.webkit.org/show_bug.cgi?id=54320
Summary Garbage collection timer cycles forever, even when nothing is happening
Geoffrey Garen
Reported 2011-02-11 15:40:27 PST
Garbage collection timer cycles forever, even when nothing is happening
Attachments
Patch (1.33 KB, patch)
2011-02-11 15:45 PST, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2011-02-11 15:40:46 PST
Geoffrey Garen
Comment 2 2011-02-11 15:45:56 PST
Geoffrey Garen
Comment 3 2011-02-11 15:58:40 PST
Comment on attachment 82202 [details] Patch Clearing flags on attachment: 82202 Committed r78386: <http://trac.webkit.org/changeset/78386>
Geoffrey Garen
Comment 4 2011-02-11 15:58:44 PST
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 5 2011-02-11 16:08:54 PST
Rolled out because it broke the build.
Joseph Pecoraro
Comment 6 2011-02-12 12:47:21 PST
Did this get fixed in r78389?
Geoffrey Garen
Comment 7 2011-02-14 11:11:40 PST
Yes, thanks Joe. Rolled back in: http://trac.webkit.org/changeset/78389.
Note You need to log in before you can comment on or make changes to this bug.