2011-02-11  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Sam Weinig.

        Garbage collection timer cycles forever, even when nothing is happening
        https://bugs.webkit.org/show_bug.cgi?id=54320

        * runtime/GCActivityCallbackCF.cpp:
        (JSC::DefaultGCActivityCallbackPlatformData::trigger): Be sure to make
        our timer inert after forcing a GC, to avoid GC'ing repeatedly.


Canonical link: https://commits.webkit.org/68389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78386 268f45cc-cd09-0410-ab3c-d52691b4dbfc